fixed the navbar alignment with the body

--- a/client/src/header.module.css
+++ b/client/src/header.module.css
@@ -27,9 +27,10 @@ body {
   position: relative;
   top: -7px;
   height: 55px;
-  margin-left: -6.5vw;
+  /* margin-left: -6.5vw; */
+  margin-left: -4vw;
   /* width: auto; */
-  margin-right: 5px;
+  /* margin-right: 5px; */
   display: flex;
   /* font-size: 26px; */
   /* display: flex; */
@@ -170,16 +171,17 @@ a.userCart:hover > div.cartPrice {
 
 .genreMenu {
   width: auto;
+  max-width: 1440px;
   position: absolute;
   /* display: block; */
-  left: -250px;
+  left: -230px;
   background-color: #191919;
   border: 1px solid #373737;
 }
 .highlightContainer {
   /* height: 10px; */
   width: 100vw;
-  max-width: 1350px;
+  max-width: 1440px;
   /* margin: 0; */
   /* right: 20px; */
   display: flex;
@@ -222,7 +224,7 @@ a.userCart:hover > div.cartPrice {
   padding-bottom: 5px;
   /* right: 0px; */
   line-height: 22px;
-  width: 15.5vw;
+  width: 16vw;
   border-bottom: 1px solid rgba(155, 155, 155, 0.2);
 }
 /* .genreContainer { */
@@ -240,8 +242,8 @@ a.userCart:hover > div.cartPrice {
 
 .genreContainer {
   height: inherit;
-  width: 100vw;
-  max-width: 1350px;
+  width: auto;
+  /* max-width: 1440px; */
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
@@ -281,7 +283,7 @@ a.userCart:hover > div.cartPrice {
   /* left: 10px; */
 
   line-height: 15px;
-  width: 17.5vw;
+  width: 16vw;
   border-bottom: 1px solid rgba(155, 155, 155, 0.2);
 }
 
