--- a/client/src/theme.css
+++ b/client/src/theme.css
@@ -12,7 +12,7 @@
   width: 205px;
   height: 30px;
   background: #262626;
-  /* margin-right: 5px; */
+  margin-right: 170px;
   /* margin-top: 8px; */
   /* margin-bottom: 0px; */
   border: none;
